# app_service

./: .env.example  .flake8  .gitignore  pyproject.toml  pytest.ini  requirements.txt
admin/: auth.py
app/: celery_config.py  config.py  db.py  email_templates.py  exceptions.py  logger.py  main.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  models.py  router.py  schemas.py  tasks.py
app/celery_config/: celery_config.py  scheduled.py
app/dao_base/: base.py
app/hotels/: dao.py  models.py  router.py  schemas.py
app/images/: dao.py  router.py
app/migrations/: env.py
app/migrations/versions/: 0d5f0cab7c3e_create_relatioship_for_hotel_and_roo.py  3bb225521949_.py  4b59e6a3f8fc_.py  542ac3d9aede_some_chan.py  63d280331cf8_add_field_role_in_users_model.py  6ae871456653_.py  70858431de6e_.py  79751676a8b6_.py  cf0344c440f7_create_relatioship_for_hotel_and_ro.py  e0b6ef712935_add_field_name_in_users_model.py
app/pages/: router.py
app/rooms/: dao.py  models.py  router.py  schemas.py
app/templates/: hotels.html  rooms.html
app/tests/: conftest.py  mock_rooms.json  mock_users.json
app/tests/integration_tests/test_bookings/: test_api_bookings.py  test_dao_bookings.py
app/tests/unit_tests/test_hotels/: test_api_hotels.py
app/tests/unit_tests/test_users/: test_api.py  test_dao.py
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
