[tool.poetry]
name = "fastapi-service"
version = "0.1.0"
description = ""
authors = ["Murad <kamylov@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.1"
aiosignal = "1.3.1"
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "4.2.0"
asyncio = "3.4.3"
attrs = "23.2.0"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
dnspython = "2.4.2"
email-validator = "2.1.0.post1"
fastapi = "0.109.0"
frozenlist = "1.4.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.2"
httptools = "0.6.1"
httpx = "0.26.0"
idna = "3.6"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
mako = "1.3.0"
markupsafe = "2.1.3"
multidict = "6.0.4"
orjson = "3.9.10"
pydantic = "2.5.3"
pydantic-extra-types = "2.4.1"
pydantic-settings = "2.1.0"
pydantic-core = "2.14.6"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
pyyaml = "6.0.1"
requests = "2.31.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.25"
starlette = "0.35.1"
typing-extensions = "4.9.0"
ujson = "5.9.0"
urllib3 = "2.1.0"
uvicorn = "0.26.0"
watchfiles = "0.21.0"
websockets = "12.0"
yarl = "1.9.4"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pymorphy2 = "^0.9.1"
celery = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
